delete buttons now aligning correctly but weird button is mysteriously appearing...

--- a/style.css
+++ b/style.css
@@ -1,19 +1,10 @@
-html {
-    box-sizing: border-box;
-  }
-  
-  *, *::before, *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-   font-family:
-   -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
-    Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-   line-height: 1.4;
-  }
+body {
+  font-family:
+  -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
+   Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  line-height: 1.4;
+ }
+ 
   
   .container {
     width: 100%;
@@ -25,7 +16,6 @@ html {
     height: 90vh;
     margin-top: 5vh;
     margin-bottom: 5vh;
-    overflow-y: auto;
   }
   
   .app-title {
@@ -51,50 +41,15 @@ html {
   
   .todo-item {
     margin-bottom: 10px;
-    margin-left: 90px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 27px
+    font-size: 27px;
+  }
 
-  }
-  
-  /*
-  .todo-item span {
-    flex-grow: 1;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-size: 22px;
-  }*/
-  
-  .done span {
-    text-decoration: line-through;
-  }
-  
   input[type="checkbox"] {
     display: none;
-  }
-  
-  .tick {
-    width: 30px;
-    height: 30px;
-    border: 3px solid #333;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .tick::before {
-    content: '✓';
-    font-size: 20px;
-    display: none;
-  }
-  
-  .done .tick::before {
-    display: inline;
   }
   
   .delete-todo {
@@ -102,7 +57,7 @@ html {
     background-color: white;
     outline: none;
     cursor: pointer;
-    margin-right: -10%;
+    
     display: inline;
   }
   
@@ -110,7 +65,7 @@ html {
     width: 30px;
     height: 30px;
     pointer-events: none;
-    float: right;
+    
   }
   
   form {
